--- a/css/style.css
+++ b/css/style.css
@@ -81,15 +81,17 @@ body, ul {
  }
  .section-banner-home .texto-banner-h1 {
    font-size: 30px;
-   width: 60%;
-   font-weight: 500;
-   padding-bottom: 20px;
-   color: white;
+   width: 60%; /* Width = Largura  */
+   font-weight: 500; /* Espessura do Texto */
+   padding-bottom: 20px; /* Margem interna > Embaixo  */
+   color: white; 
+   /* Margin = o objeto empurra a margem ; Padding = a Margem empurra o texto */
  }
  .section-banner-home .texto-banner p {
    font-size: 15px;
    margin-bottom: 20px;
    color: white;
+   text-align: justify;
  }
  .section-banner-home .texto-banner a {
    color: rgb(255, 255, 255);
@@ -107,3 +109,104 @@ body, ul {
 }
 
  /* Fim Estilo Banner Home */
+ /* Início Estilo Destaque */
+ 
+ .destaque p {
+   width: 77%;
+   text-align: center;
+   font-size: 14px;
+   margin: 30px auto;
+
+ }
+ .destaque figcaption {
+   font-size: 13px;
+   color: #000;
+   text-decoration: none;
+   font-weight: bold;
+   text-align: center;
+ }
+ .destaque #saiba-mais {
+   justify-content: center;
+   display: flex;
+   text-decoration: none;
+   color: #dbd949;
+   font-size: 18px;
+   font-weight: bold;
+   background: rgb(102, 53, 6);
+   margin: 30px 0px ;
+   width: 25%;
+ }
+.destaque .col-6 img:hover {
+   box-shadow: 2px 2px 6px #969696;
+   transition: 0.3s;
+}
+ /* Fim Estilo Destaque */
+
+ /* Início estilo novidades  */
+ .novidades .text-body {
+   width: 80%;
+   margin: 70px auto;
+ }
+ .novidades h2 {
+   color: #000;
+   font-size: 26px;
+   width: 70%;
+ }
+ .novidades p {
+   color: rgb(0, 0, 0);
+ }
+ .novidades a {
+   justify-content: center;
+   display: flex;
+   text-decoration: none;
+   color:  #dbd949;
+   font-size: 18px;
+   font-weight: bold;
+   background: rgb(102, 53, 6);
+   margin: 30px 0px ;
+   width: 35%;
+ }
+ /* Fim estilo novidades  */
+ 
+ /* Início estilo galeria */
+.galeria {
+   margin: 60px auto 20px;
+   /* Quando tivermos 4 valores no margin = 1°-top / 2°-right / 3°-botton / 4°-left > Exemplo: margin: 60px 60px 60px 60px; */
+   /* Quando tivermos 3 valores = 1°-top / 2°-right and left / 3°-botton > Exemplo: margin: 60px auto 60px; */
+   /* Quando tivermos 2 valores = 1°-top and botton / 2°-right and left > Exemplo: margin: 60px 30px; */
+   /* Quando tivermos 1 valor = top, botton, right and left serão idênticos > Exemplo: margin: 60px;*/
+   /* Essa regra se aplica também ao paddding. */
+}
+.galeria .container {
+   margin-left: 11%;
+}
+.galeria h2 {
+ text-align: center;
+ font-size: 24px;
+
+}
+.galeria p {
+   text-align: center;
+   width: 50%;
+   margin: 14px auto 50px;
+
+}
+.galeria .gallery {
+   width: 30%;
+   margin: 14px auto 50px;
+
+}
+.galeria .gallery img {
+   width: 80%;
+   height: 80%;
+   -webkit-transition: -webkit-transform .5s ease;
+   transition: transform .5s ease;
+   display: block;
+}
+.galeria .gallery img:hover {
+   -webkit-transform: scale(1.9);
+   transform: scale(1.9);
+   box-shadow: 0 0 10px rgba(189, 218, 88, 0.74);
+
+}
+ /* Fim estilo galeria */
