--- a/css/style_full.css
+++ b/css/style_full.css
@@ -10,29 +10,28 @@ body, ul {
 
 }
 
-#menu a {
-   font-size: 22px;
-   /* border-bottom-right-radius: 15px; */
-   /* border-bottom-left-radius: 15px; */
-   /* border-bottom: 4px solid #e4d07a; */
-   color: black;
+#menu a:hover {
+   
+   font-size: 21px;
+   border-bottom-right-radius: 15px;
+   border-bottom-left-radius: 15px;
+   border-bottom: 4px solid #e4d07a;
+}
+ #menu a {
+    color: black;
     text-decoration: none;
     /* font-family: sans-serif; */
     font-family: 'Tilt Neon', sans-serif;
+    font-size: 20px;
     font-weight: 600;
     transition: 0.4s;
     text-align: center;
-    padding: 0 0.4em 0.2em 0.4em; /* top - rigth - botton - left */
-}
- #menu a:hover {
-    
+    padding: 0 0.4rem ;
     /* background: rgba(0, 0, 0, 0.05); */
-    font-size: 24px;
-    /* border-bottom-right-radius: 15px; */
-    /* border-bottom-left-radius: 15px; */
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
     /* border-color: #c4b059; */
-    border-left: 4px solid #c4b059;
-    /* border-bottom: 4px solid #c4b059; */
+    border-bottom: 4px solid #c4b059;
     box-shadow: 2px 2px 4px #c4b059;
  }
  
@@ -415,54 +414,3 @@ body, ul {
    margin-top: 40px; 
  }
  /* Fim estilo Footer (rodapé) */
-
- /* Início estilo Vídeos */
-.embed-container {
-   position: relative;
-   padding-bottom: 0;
-   height: auto;
-   max-width: 100%;
-   margin-top: 0;
-   margin-bottom: 30px;
-   padding-top: 80px;
-   padding-left: 10%;
-   padding-right: 10%;
-   display: flex;
-
-}
-.embed-container p {
-   text-align: center;
-   font-size: 20px;
-}
-.embed-container h2 {
-   text-align: center;
-   font-size: 24px;
-   font-weight: bold;
-   font-family: 'Tilt Neon', sans-serif;
-}
-.embed-container iframe {
-   position: relative;
-   top: 0;
-   left: 0;
-   width: 100%;
-   height: 250px;
-   border-radius: 1em;
-   box-shadow: gray 0.5em 0.5em 0.3em;
-   transition: transform .3s;
-   display: flex;
-}
-.embed-container iframe:hover {
-   flex: 1;
-   z-index: 1;
-   transform: scale(1.2);
-   box-shadow: 0 0 10px rgba(0, 0, 0, 0.446);
-
-}
-.embed-container .col-lg-4 {
-   margin-top: 30px;
-
-}.embed-container .col-lg-6 {
-   margin-top: 30px;
-}
-
- /* Fim estilo Vídeos */
