--- a/css/style.css
+++ b/css/style.css
@@ -338,8 +338,8 @@ body, ul {
  /* Início Whatsapp */
  .whatsapp {
    position: fixed;
-   top: 800px;
-   right: 20px;
+   top: 750px;
+   right: 30px;
    z-index: 200;
  }
 .whatsapp img {
@@ -534,7 +534,7 @@ body, ul {
 
  
  
- /* Fim estilo contato */
+ 
  /* Início estilo market place */
    .market-place {
    width: 100%;
@@ -568,3 +568,68 @@ body, ul {
  } 
 
  /* Fim estilo market place */
+
+ /* Fim estilo contato */
+
+ /* Início estilo Produtos */
+ .col-lg-4 .card {
+   border-style : none;
+   border: 0px;
+   min-height: 300px;
+ }
+ .text-center .mb-5 {
+   margin-top: 20px;
+
+ }
+ .card img {
+   /* height: auto; */
+
+   max-height: 250px;
+   width: 95%;
+   
+ }
+ .card.bg-image {
+   position: relative;
+   overflow: hidden;
+   background-repeat: no-repeat;
+   background-size: cover;
+   background-position: 50%;
+
+ }
+ .card .card.bg-image img {
+   height: 300px;
+ }
+ .mask {
+   position: absolute;
+   top: 0;
+   left: 0;
+   right: 0;
+   bottom: 0;
+   overflow: hidden;
+   width: 100%;
+   height: 100%;
+   background-attachment: fixed;
+
+
+ }
+ .hover-overlay .mask {
+   opacity: 0;
+   -webkit-transition: all .3s ease-in-out;
+   transition: all .3s ease-in-out;
+ }
+ .hover-overlay .mask:hover {
+   opacity: 1;
+
+ }
+ .card-body .btn {
+   background-color: #ababab; /* cor do botão */
+   color:white ; /* cor do texto do botão */
+   font-weight: 400;/* espessura do botão ex.negrito = bold */
+   border: none;
+   outline: 0px solid transparent;
+ }
+
+
+
+  
+ /* Fim estilo Produtos */
